# fast_zero

./: README.md  pyproject.toml
migration/: env.py
migration/versions/: 8d7e32bacab2_create_users_table.py  a137aa6f630f_create_todos_table.py
src/fast_zero/: app.py  models.py  schemas.py  scurity.py  security.py  settings.py
src/fast_zero/routers/: auth.py  todos.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_models.py  test_security.py  test_todo.py  test_users.py
