[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Wellington Santos",email = "wellington.santos@genial.com.vc"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "fast_zero", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"

[tool.ruff]
line-length = 79
extend-exclude = ['migrate']

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
run = "fastapi dev src/fast_zero/app.py"

pre_test = "task lint"
test = "PYTHONPATH=src pytest --cov=src/fast_zero"

lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
