[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Wellington Santos",email = "wellington.santos@genial.com.vc"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pyjwt (>=2.10.1,<3.0.0)",
]

[tool.poetry]
packages = [{ include = "fast_zero", from = "src" }]


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"
factory-boy = "^3.3.3"
freezegun = "^1.5.2"

[tool.ruff]
line-length = 79
extend-exclude = ['migrate']

[tool.ruff.lint]
preview = true
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.taskipy.tasks]
run = "fastapi dev src/fast_zero/app.py --host 0.0.0.0"

pre_test = "task lint"
test = "PYTHONPATH=src pytest --cov=src/fast_zero"
test_html = "PYTHONPATH=src pytest --cov=src/fast_zero --cov-report=html:coverage_html_report"

lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
